<resources>
    <string name="app_name">GrootanTechnologies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="heading">Log In</string>
    <string name="sub_heading">Welcome To Grootan</string>
    <string name="sub_heading1">Empowering Businesses with World-Class Technology!</string>
    <string name="email_hint">E-mail ID</string>
    <string name="password_hint">Password</string>
    <string name="button_login_text">SIGN IN</string>
    <string name="button_sign_up_text">SIGN UP</string>
    <string name="button_below_text">Don\'t have an account?</string>
</resources>