<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.grootan.technologies.AppViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:orientation="vertical"
        android:weightSum="12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/heading"
                        android:textColor="#002f4f"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:fontFamily="@font/quicksand_regular"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/sub_heading"
                        android:textColor="#002f4f"
                        android:textFontWeight="600"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_india"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/opensans_regular"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/sub_heading1"
                        android:textColor="#00d3b4"
                        android:textFontWeight="600"
                        android:textSize="14sp" />


                    <LinearLayout
                        android:id="@+id/lin_user_back"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_box_size"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="73dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/lin_storke"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:padding="1dp"
                        android:weightSum="3">

                        <LinearLayout
                            android:id="@+id/lin_user_back1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:background="@drawable/lin_login_clr_storke"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_phone" />


                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#c3cde4" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <EditText
                                    android:id="@+id/edt_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@null"
                                    android:fontFamily="@font/quicksand_regular"
                                    android:hint="@string/email_hint"
                                    android:paddingLeft="@dimen/left_right_margin_12"
                                    android:paddingRight="@dimen/left_right_margin_12"
                                    android:singleLine="true"
                                    android:text="@={viewModel.userEmail}"
                                    android:textColor="#5b636a"
                                    android:textColorHint="#805b636a"
                                    android:textCursorDrawable="@drawable/color_cursor"
                                    android:textFontWeight="600"
                                    android:textSize="@dimen/edit_text_size" />

                                <ProgressBar
                                    android:id="@+id/mob_progress"
                                    android:layout_width="19dp"
                                    android:layout_height="19dp"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerInParent="true"
                                    android:layout_marginRight="16dp"
                                    android:visibility="gone" />
                            </RelativeLayout>


                        </LinearLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/lin_pass"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_box_size"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/lin_storke"
                        android:orientation="horizontal"
                        android:padding="1dp"
                        android:weightSum="3">

                        <LinearLayout
                            android:id="@+id/lin_pass1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:background="@drawable/lin_login_clr_storke"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_password" />

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#c3cde4" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <EditText
                                    android:id="@+id/edt_pass"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@null"
                                    android:fontFamily="@font/quicksand_regular"
                                    android:hint="@string/password_hint"
                                    android:inputType="textPassword"
                                    android:maxLength="16"
                                    android:paddingLeft="@dimen/left_right_margin_12"
                                    android:singleLine="true"
                                    android:text="@={viewModel.userPassword}"
                                    android:textColor="#5b636a"
                                    android:textColorHint="#805b636a"
                                    android:textCursorDrawable="@drawable/color_cursor"
                                    android:textFontWeight="600"
                                    android:textSize="@dimen/edit_text_size" />
                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_box_size"
                        android:layout_marginTop="70dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/lin_login"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/lin_button"
                            android:visibility="visible">

                            <TextView
                                android:id="@+id/txt_signIn"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/quicksand_medium"
                                android:gravity="center"
                                android:onClick="@{()-> viewModel.onButtonClicked()}"
                                android:text="@={viewModel.signInTxt}"
                                android:textColor="#ffffff"
                                android:textFontWeight="700"
                                android:textSize="@dimen/btn_text_size" />

                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:indeterminate="true"
                            android:indeterminateTintMode="src_atop"
                            android:theme="@style/Theme.GrootanTechnologies.PurpleTheme"
                            android:visibility="gone" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quicksand_regular"
                            android:gravity="center"
                            android:text="@string/button_below_text"
                            android:textColor="#2e3e6a"
                            android:textFontWeight="600"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="12.8dp"
                        android:background="@drawable/lin_get_started"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/quicksand_medium"
                            android:gravity="center"
                            android:onClick="@{()-> viewModel.onButtonSignUpClicked()}"
                            android:text="@={viewModel.signUpTxt}"
                            android:textColor="#00d3b4"
                            android:textFontWeight="700"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>


    </LinearLayout>

</layout>
